Fixes #4290: separator line not visible

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -12346,6 +12346,7 @@ output {
     margin-top: 6px;
     margin-bottom: 6px;
     border: 0;
+    border-top: 1px solid var(--background-modifier-border);
   }
 
   @include dark {
